Fixing more spacing bugs

--- a/style.css
+++ b/style.css
@@ -42,6 +42,8 @@ h2 {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  overflow: hidden;
+  white-space: nowrap;
 }
 .post p {
   font-size: 10pt;
@@ -176,7 +178,7 @@ button span {
     "Open Sans",
     "Helvetica Neue",
     sans-serif;
-  margin-top: -3vh;
+  margin-top: -2.5vh;
   margin-left: -5px;
-  text-overflow: "";
+  text-overflow: " ";
 }
